3 files modified, 1 added

--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,6 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
+    <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
   </body>
 </html>
