--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
     </noscript>
     <div id="app"></div>
     <script src="../path/to/flowbite/dist/flowbite.min.js"></script>
+    <script src="https://flowbite-admin-dashboard.vercel.app/app.bundle.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
   </body>
